[package]
name = "cormorant"
version = "0.1.0"
authors = ["Zachary Tong <zacharyjtong@gmail.com>"]
build = "build.rs"

[dependencies]
mioco = "*"
mio = "*"
clap = "1.2.5"
toml = "0.1.22"
rustc-serialize = "0.3"
env_logger = "*"
log = "*"
capnp = "0.4.3"
uuid = "0.1"

[build-dependencies]
capnpc = "0.4.3"
